# eigentempl

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
src/: main.cpp  matrix_mult.cpp
tests/: test_matrix_mult.cpp  tests_main.cpp
